# Electrochem_Flask

./: .gitignore  README.md  env-example  pyproject.toml
app/: __init__.py  app.py  graph_builder.py  main.py  routes.py
app/misc/: populate.py
app/models/: bath.py  compound.py  electrode.py  element.py  ion.py  ionic_compound.py  solvent.py
data/old/: Raw.csv
data/tables/: Chemical_Industry.csv  Metal_Industry.csv  Total_Industry.csv  Источники.txt
electrochem_predict_flask/: __init__.py  main.py  routes.py
electrochem_predict_flask/forms/: bath_form.py
electrochem_predict_flask/migrations/versions/: 57e41c67ff29_rework.py  6acba2cb871b_rework2.py  cecb28d4f974_initial_migration.py
electrochem_predict_flask/misc/: populate.py
electrochem_predict_flask/models/: __init__.py  bath.py  bath_temp.py  compound.py  electrode.py  element.py  ion.py  ionic_compound.py  ionic_solvent.py  solubility.py  solvent.py
frontend/: README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
frontend/src/: index.ts  styles.css
frontend/src/html/: index.html  predict.html
frontend/templates/: index.html  not_found.html  predict.html
graph_builder/: graph_builder.py
